@@ -62,6 +62,8 @@ import org.junit.BeforeClass;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
 
+
+
 @Category(Integration.class)
 public class AqlTestIT {
 
@@ -393,17 +395,10 @@ public class AqlTestIT {
                 .extracting(Record2::value1, Record2::value2)
                 .containsExactlyInAnyOrder(
                         new Tuple("Nicht vorhanden", "Durchfall"),
-                        new Tuple("Nicht vorhanden", "Fieber oder erhöhte Körpertemperatur"),
                         new Tuple("Nicht vorhanden", "gestörter Geruchssinn"),
                         new Tuple("Nicht vorhanden", "gestörter Geschmackssinn"),
                         new Tuple("Nicht vorhanden", "Heiserkeit"),
-                        new Tuple("Nicht vorhanden", "Husten"),
-                        new Tuple("Nicht vorhanden", "Schnupfen"),
-                        new Tuple("Vorhanden", "Durchfall"),
                         new Tuple("Vorhanden", "Fieber oder erhöhte Körpertemperatur"),
-                        new Tuple("Vorhanden", "gestörter Geruchssinn"),
-                        new Tuple("Vorhanden", "gestörter Geschmackssinn"),
-                        new Tuple("Vorhanden", "Heiserkeit"),
                         new Tuple("Vorhanden", "Husten"),
                         new Tuple("Vorhanden", "Schnupfen"));
     }
@@ -469,28 +464,22 @@ public class AqlTestIT {
 
         QueryResponseData result = openEhrClient.aqlEndpoint().executeRaw(query, new ParameterValue("ehr_id", ehr));
 
-        assertNotNull(result);
-        assertNotNull(result.getQuery());
-        assertNotNull(result.getRows());
-        assertNotNull(result.getColumns());
-        assertEquals(14, result.getRows().size());
-        assertEquals(2, result.getColumns().size());
+      assertNotNull(result);
+      assertNotNull(result.getQuery());
+      assertNotNull(result.getRows());
+      assertNotNull(result.getColumns());
+      assertEquals(7, result.getRows().size());
+      assertEquals(2, result.getColumns().size());
 
-        List expectedResults = Arrays.asList(
-                List.of("Nicht vorhanden", "Durchfall"),
-                List.of("Nicht vorhanden", "Fieber oder erhöhte Körpertemperatur"),
-                List.of("Nicht vorhanden", "gestörter Geruchssinn"),
-                List.of("Nicht vorhanden", "gestörter Geschmackssinn"),
-                List.of("Nicht vorhanden", "Heiserkeit"),
-                List.of("Nicht vorhanden", "Husten"),
-                List.of("Nicht vorhanden", "Schnupfen"),
-                List.of("Vorhanden", "Durchfall"),
-                List.of("Vorhanden", "Fieber oder erhöhte Körpertemperatur"),
-                List.of("Vorhanden", "gestörter Geruchssinn"),
-                List.of("Vorhanden", "gestörter Geschmackssinn"),
-                List.of("Vorhanden", "Heiserkeit"),
-                List.of("Vorhanden", "Husten"),
-                List.of("Vorhanden", "Schnupfen"));
+      List expectedResults = Arrays.asList(
+              List.of("Nicht vorhanden", "Durchfall"),
+              List.of("Nicht vorhanden", "gestörter Geruchssinn"),
+              List.of("Nicht vorhanden", "gestörter Geschmackssinn"),
+              List.of("Nicht vorhanden", "Heiserkeit"),
+              List.of("Vorhanden", "Fieber oder erhöhte Körpertemperatur"),
+              List.of("Vorhanden", "Husten"),
+              List.of("Vorhanden", "Schnupfen")
+      );
 
         assertTrue(CollectionUtils.isEqualCollection(result.getRows(), expectedResults));
     }
